test/conformance/chainsaw/validating-admission-policy-reports/events/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-fail-01
  labels:
    app: nginx-1
spec:
  replicas: 4
  selector:
    matchLabels:
      app: nginx-1
  template:
    metadata:
      labels:
        app: nginx-1
    spec:
      containers:
      - name: nginx
        image: nginx:1.14.2
        ports:
        - containerPort: 80
