test/conformance/chainsaw/validating-admission-policy-reports/events/policy-event.yaml
apiVersion: v1
kind: Event
metadata:
  namespace: default
involvedObject:
  kind: ValidatingAdmissionPolicy
  name: check-deployment-replicas-vap
reason: PolicyViolation
action: Resource Passed
reportingComponent: kyverno-scan
type: Warning
