test/conformance/chainsaw/validating-admission-policy-reports/events/deployment-assert.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-fail-01
