test/conformance/chainsaw/validating-admission-policy-reports/events/01-deployment.yaml
---
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: TestStep
metadata:
  creationTimestamp: null
  name: deployment
spec:
  timeouts: {}
  try:
  - apply:
      file: deployment.yaml
  - assert:
      file: deployment-assert.yaml
  finally:
  - script:
      content: sleep 5
    timeout: 10s
