test/conformance/chainsaw/validating-admission-policy-reports/events/03-event.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: TestStep
metadata:
  name: event
spec:
  try:
  - assert:
      file: policy-event.yaml
