test/conformance/chainsaw/validating-admission-policy-reports/events/04-event.yaml
---
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: TestStep
metadata:
  creationTimestamp: null
  name: event
spec:
  timeouts: {}
  try:
  - assert:
      file: policy-event.yaml
