test/conformance/chainsaw/validating-admission-policy-reports/events/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: events
spec:
  concurrent: false
  steps:
  - name: step-01
    try:
    - apply:
        file: deployment.yaml
    - assert:
        file: deployment-assert.yaml
  - name: step-02
    try:
    - apply:
        file: policy.yaml
    - assert:
        file: policy.yaml
  - name: step-04
    try:
    - assert:
        file: policy-event.yaml
